--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My title</title>
+    <style>
+        body {
+            text-align: center;
+        }
+        button {
+            background-color: #0000ff;
+            color: #fff;
+            padding: 10px 30px;
+            font-size: 15px;
+            border: none;
+            border-radius: 5px;
+        }
+        p{
+            font-size: 19px;
+        }
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>Muhammad Hussain</h1>
-    <p>I love my country</p>
+    <h2>Muhammad Hussain</h2>
+    <p>I love my country because it is my mother-land.</p>
+    <button>Click me</button>
 </body>
 </html>
