changes in  index2 file

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <p>Introduction to ICT</p>
+    <h1>Muhammad Hussain</h1>
+    <p><b>Topic:</b> Introduction to ICT</p>
 </body>
 
 </html>
