change topic to lesson

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Muhammad Hussain</h1>
-    <p><b>Topic:</b> Introduction to ICT</p>
+    <p><b>Lesson:</b> Introduction to ICT</p>
 </body>
 
 </html>
